Rename project and solution and upgrade to .net 10

--- a/MathCalculator/MainPage.xaml
+++ b/MathCalculator/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MathOperators.MainPage">
+             x:Class="MathCalculator.MainPage">
 			 
     <VerticalStackLayout 
         Spacing="20">
@@ -19,7 +19,6 @@
                 <Entry x:Name="_txtLeftOp" Margin="0, 6, 10, 0"/>
             </VerticalStackLayout>
             <Picker x:Name="_pckOperand"
-                    Title="..."
                     Grid.Column="1"
                     HorizontalOptions="Center"
                     VerticalOptions="End"
