--- a/MathCalculator/Platforms/Windows/App.xaml
+++ b/MathCalculator/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="MathOperators.WinUI.App"
+    x:Class="MathCalculator.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:MathOperators.WinUI">
+    xmlns:local="using:MathCalculator.WinUI">
 
 </maui:MauiWinUIApplication>
